--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 <div id="rodape">
  <h1 align="center"> Outros meios de comunicação</h1>
  <div>
-   
-  <h3> <ul><img src="image/whats.png" alt="whats" width="50px" >&nbsp;(88)9 9627-5612</h3></ul>
+  <h3> <ul><img src="image/maps.png" alt="maps" width="50px" >&nbsp; <a href="https://www.google.com.br/maps/@-7.1051529,-39.6818486,15z?hl=pt-PT">Endereço</a></h3></ul>
+  <h3> <ul><img src="image/whats.png" alt="whats" width="50px" >&nbsp;<a href="http://api.whatsapp.com/send?1=pt_BR&phone=5588996275612">WhatsApp</a></h3></ul>
   <h3><ul><img src="image/tel.png" alt="tel" width="50px" >&nbsp;(88)3500-0000</h3>
    
  </div>
