--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
  </div>
   </div>
 
-  
-
+  <h2 align="center">Horário de funcionamento</h2>
+  <h3 align="center" >Segunda a Sexta dás 08:00 às 17:00</h3>
+  <h3 align="center" >Sábado dás 08:00 às 14:00</h3>
     
     
 
